--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,19 +3,35 @@ security:
     # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
     password_hashers:
         Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        App\Entity\User:
+            algorithm: auto
     # https://symfony.com/doc/current/security.html#loading-the-user-the-user-provider
     providers:
         users_in_memory: { memory: null }
+        app_user_provider:
+            entity:
+                class: App\Entity\User
+                property: username
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
-            provider: users_in_memory
+            provider: app_user_provider
+            # provider: users_in_memory
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#the-firewall
+            form_login:
+                login_path: login
+                check_path: login
+                # enable_csrf: true
+                default_target_path: homepage
+            # login_throttling:
+            #     max_attempts: 3
+            logout:
+                path: logout
 
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
