--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,11 +36,17 @@ security:
             # https://symfony.com/doc/current/security/impersonating_user.html
             # switch_user: true
 
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        # Role admin for any url that starts with /users
+        - { path: ^/users, roles: ROLE_ADMIN }
+        # Role user for any url that starts with /tasks
+        - { path: ^/tasks, roles: ROLE_USER }
+
 
 when@test:
     security:
